--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 /*Ende Google Fonts Import*/
 
+@charset "UTF-8";
+
