--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,7 @@ aside section {
     background-color: thistle;
     width: 32%;
     float: left;
+    margin: 0 0.2% 0 0.2%;
 }
 
 aside section img {
