--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,7 @@ aside {
 aside section {
     background-color: thistle;
     width: 32%;
+    height: 20%;
     float: left;
     margin: 0 0.6% 0 0.6%;
 }
