--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@ header {
 
 #header {
     width: 100%;
+    margin-bottom: 5%;
 }
 
 aside {
@@ -34,7 +35,7 @@ aside {
 aside section {
     background-color: thistle;
     width: 32%;
-    height: 40%;
+    height: 200px;
     float: left;
     margin: 0 0.6% 0 0.6%;
 }
