--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ body {
 
 header {
     width: 100%;
+    margin-bottom: 20px;
 }
 
 #Logo {
@@ -24,7 +25,6 @@ header {
 
 #header {
     width: 100%;
-    margin-bottom: 5%;
 }
 
 aside {
