--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,11 +29,14 @@ header {
 aside {
     background-color: teal;
     padding: 0.2% 2% 0.2% 2%;
+    margin: 50px 0 50px 0;
+    height: 505px;
 }
 
 aside section {
     background-color: thistle;
     width: 32%;
+    height: 500px;
     float: left;
     margin: 0 0.6% 0 0.6%;
 }
@@ -46,8 +49,14 @@ aside section img {
 aside section p {
     background-color: turquoise;
     margin: 0 10% 0 10%;
+    padding: 2% 3% 2% 3%;
+    height: 110px;
+    border-radius: 10px;
 }
 
+#headTaste {
+    clear: left;
+}
 
 .Marktlogo {
     max-width: 5%;
