--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,20 +30,20 @@ aside {
     background-color: teal;
     padding: 0.2% 2% 0.2% 2%;
     margin: 50px 0 50px 0;
-    height: 305px;
+    height: 405px;
 }
 
 aside section {
     background-color: thistle;
     width: 32%;
-    height: 300px;
+    height: 400px;
     float: left;
     margin: 0 0.6% 0 0.6%;
 }
 
 aside section img {
     width: 50%;
-    margin: 0 25% 0 25%;
+    margin: 15px 25% 0 25%;
 }
 
 aside section p {
