--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,6 +68,16 @@ aside section p {
     margin: 20px 0 50px 0;
 }
 
+#cta1 {
+    width: 66%;
+    margin-right: 0.9%;
+}
+
+#cta2 {
+    width: 33%;
+    float: left;
+}
+
 .Marktlogo {
     max-width: 5%;
     height: auto;
