--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,7 +73,7 @@ aside section p {
 }
 
 #CTA button {
-    position: relative;
+    position: absolute;
     margin: -50px 0 0 0;
 }
 
@@ -86,6 +86,7 @@ aside section p {
 #cta2 {
     width: 33%;
     float: left;
+    clear: right;
 }
 
 #FAQ {
