--- a/stylesheet.css
+++ b/stylesheet.css
@@ -69,12 +69,24 @@ aside section p {
 }
 
 #CTA {
+    position: relative;
     margin: 50px 0 50px 0;
     clear: both;
 }
 
 #CTA button {
-
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #555;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 #cta1 {
@@ -103,9 +115,13 @@ aside section p {
 /*FOOTER*/
 #footerLEFT {
     text-align: left;
+    width: 40%;
+    float: left;
 }
 
 #footerRIGHT {
     text-align: right;
+    width: 40%;
+    float: left;
 }
 /*ENDE FOOTER*/
