--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,11 +76,7 @@ aside section p {
 
 #CTA button {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
+    background-color: rgba(1, 1, 1, 0);
     color: white;
     font-size: 16px;
     padding: 12px 24px;
@@ -98,6 +94,20 @@ aside section p {
 #cta2 {
     width: 33%;
     float: left;
+}
+
+#btn1 {
+    top: 30%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+#btn2 {
+    top: 30%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
 
 #FAQ {
