--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,15 +97,15 @@ aside section p {
 }
 
 #btn1 {
-    top: 30%;
-    left: 30%;
+    top: 30px;
+    left: 35%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
 
 #btn2 {
-    top: 30%;
-    left: 80%;
+    top: 30px;
+    left: 85%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
