--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,6 +118,7 @@ aside section p {
 
 #Laden {
     clear: left;
+    background-color: saddlebrown;
     margin: 50px 0 50px 0;
     padding: 0 5% 0 5%;
 }
