--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,8 +118,7 @@ aside section p {
 
 #Laden {
     clear: left;
-    background-color: saddlebrown;
-    margin: 50px 0 50px 0;
+    margin: 50px 0 0 0;
     padding: 0 5% 0 5%;
 }
 
@@ -128,6 +127,7 @@ aside section p {
 }
 
 .LLogo section {
+    background-color: saddlebrown;
     margin: 20px 0 20px 0;
 }
 
