--- a/stylesheet.css
+++ b/stylesheet.css
@@ -125,13 +125,14 @@ aside section p {
 
 #Laden {
     clear: left;
-    margin: 10% 0 0 0;
+    margin: 5% 0 0 0;
     padding: 0 5% 0 5%;
 }
 
 #Laden h3 {
     text-align: center;
     text-transform: uppercase;
+    font-weight: 700;
 }
 
 .LLogo {
