--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,12 +148,12 @@ aside section p {
 }
 
 #reelHead {
-    margin: 10% 0 0 0;
+    margin: 10% 0 5% 0;
     text-align: center;
 }
 
 #carousel{
-    margin: 10% 0 0 0;
+
 }
 
 
