--- a/stylesheet.css
+++ b/stylesheet.css
@@ -96,6 +96,19 @@ aside section p {
     float: left;
 }
 
+/*Zoom in Effekt*/
+.hover01 figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover01 figure:hover img {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+/*Ende Zoom In effekt */
+
 #btn1 {
     top: 90%;
     left: 33%;
@@ -164,7 +177,6 @@ aside section p {
 
 #cta3 p{
     text-align: center;
-
 }
 
 #mail {
@@ -185,19 +197,13 @@ aside section p {
 /*ENDE CTA3*/
 
 /*FOOTER*/
-footer{
-    color: 150, 150, 150;
-}
-
 #footerLEFT {
-    color: teal;
     text-align: left;
     width: 50%;
     float: left;
 }
 
 #footerRIGHT {
-    color: teal;
     text-align: right;
     width: 50%;
     float: left;
