--- a/stylesheet.css
+++ b/stylesheet.css
@@ -97,16 +97,16 @@ aside section p {
 }
 
 /*Zoom in Effekt*/
-.hover02 figure img {
-	width: 300px;
-	height: auto;
+.hover01 figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
 }
-.hover02 figure:hover img {
-	width: 350px;
+.hover01 figure:hover img {
+	-webkit-transform: scale(0.7);
+	transform: scale(0.7);
 }
-
 /*Ende Zoom In effekt */
 
 #btn1 {
