--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,19 +91,16 @@ aside section p {
     float: left;
 }
 
-#cta2 {
-    width: 33%;
-    float: left;
-}
 
 /*Zoom in Effekt*/
 figure {
-	width: 300px;
-	height: 200px;
+	width: 33%;
+	height: auto;
 	margin: 0;
 	padding: 0;
 	background: #fff;
-	overflow: hidden;
+    overflow: hidden;
+    float: left;
 }
 
 .hover01 figure img {
