--- a/stylesheet.css
+++ b/stylesheet.css
@@ -95,7 +95,7 @@ aside section p {
 /*Zoom in Effekt*/
 figure {
 	width: 33%;
-	height: 900px
+	height: 900px;
 	margin: 0;
 	padding: 0;
 	background: #fff;
