--- a/stylesheet.css
+++ b/stylesheet.css
@@ -173,7 +173,7 @@ figure {
 /*CTA3*/
 #cta3 {
     background-color: rgb(123, 170, 160);
-    padding: 2% 0 0 0;
+    padding: 20px 0 0 0;
 }
 
 #cta3 h3 {
