--- a/stylesheet.css
+++ b/stylesheet.css
@@ -178,10 +178,12 @@ figure {
 #cta3 h3 {
     text-align: center;
     margin: 10% 0 0 0;
+    color: white;
 }
 
 #cta3 p{
     text-align: center;
+    color: white;
 }
 
 #mail {
