--- a/stylesheet.css
+++ b/stylesheet.css
@@ -206,7 +206,7 @@ figure {
 /*FOOTER*/
 footer {
     background-color: rgb(35, 235, 235);
-    height: auto;
+    height: 500px;
 }
 
 #footerLEFT {
