--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@ body {
     background-color: bisque;
 }
 
+/*HEADER*/
 header {
     width: 100%;
 }
@@ -25,7 +26,9 @@ header {
 #header {
     width: 100%;
 }
+/*ENDE HEADER*/
 
+/*SPRECHBLASEN*/
 aside {
     background-color: teal;
     padding: 0.2% 2% 0.2% 2%;
@@ -53,7 +56,9 @@ aside section p {
     height: 115px;
     border-radius: 10px;
 }
+/*ENDE SPRECHBLASEN*/
 
+/*GESCHMACKSRICHTUNG (Text/Slider)*/
 #headTaste {
     clear: left;
 }
@@ -67,7 +72,9 @@ aside section p {
     text-align: center;
     margin: 20px 0 50px 0;
 }
+/*ENDE GESCHMACKSRICHTUNG*/
 
+/*CTA*/
 #CTA {
     position: relative;
     margin: 50px 0 50px 0;
@@ -127,7 +134,9 @@ figure {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
+/*ENDE CTA*/
 
+/*FAQ*/
 #FAQ {
     clear: left;
     margin: 35% 0 0 0;
@@ -141,7 +150,9 @@ figure {
     text-align: center;
     margin: 2% 0 2% 0;
 }
+/*ENDE FAQ*/
 
+/*ERHÄLTLICH BEI*/
 #Laden {
     clear: left;
     margin: 5% 0 0 0;
@@ -164,11 +175,14 @@ figure {
     height: 60px;
     width: auto;
 }
+/*ENDE ERHÄLTLICH BEI*/
 
+/*INSTAREEL*/
 #reelHead {
     margin: 10% 0 2% 0;
     text-align: center;
 }
+/*ENDE INSTAREEL*/
 
 /*CTA3*/
 #cta3 {
@@ -205,8 +219,8 @@ figure {
 
 /*FOOTER*/
 footer {
-    background-color: rgb(35, 235, 235);
-    height: 20%;
+    background-color: rgb(246, 246, 246);
+    
 }
 
 #footerLEFT {
