--- a/stylesheet.css
+++ b/stylesheet.css
@@ -253,9 +253,11 @@ svg {
 
 /*--------------------*/
 
-@media (min-width: 768px){
+@media (max-width: 768px){
     .content {
         width: 50%;
     }
 }
+
+@media (min)
 
