--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,11 +89,11 @@ aside section p {
 /*ENDE GESCHMACKSRICHTUNG*/
 
 /*CTA*/
-#CTA {
+/*#CTA {
     position: relative;
     margin: 50px 0 50px 0;
     clear: both;
-}
+}*/
 
 #CTA button {
     position: absolute;
@@ -106,11 +106,11 @@ aside section p {
     border-radius: 5px;
 }
 
-#cta1 {
+/*#cta1 {
     width: 60%;
     margin-right: 0.9%;
     float: left;
-}
+}*/
 
 
 /*Zoom in Effekt*/
