--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,7 +91,7 @@ aside section p {
 /*CTA*/
 #CTA {
     position: relative;
-    /*margin: 50px 0 50px 0;*/
+    margin: 50px 0 50px 0;
     clear: both;
 }
 
