--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,10 +12,37 @@ body {
 }
 
 /*NAV*/
-    #logo img {
-        padding: 5%;
-        justify-content: center;
-    }
+nav {
+   position: fixed;
+   top: 0; 
+   left: 0;
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   transition: 0.6s;
+   padding: 5% 15%;   
+   z-index: 10000;
+}
+
+nav.sticky{
+   padding: 1%; 
+   background: #fff;
+}
+
+nav .Flogo {
+    position: relative;
+    transition: 0.6s;  
+}
+
+.banner {
+    position: relative;
+    width 100%;
+    height: 100vh;
+    background: url(./images/headerPH.jpg);
+    background-size: cover;
+}
+
 /*ENDE NAV*/
 
 /*WRAPPER*/
