--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,9 +12,33 @@ body {
 }
 
 /*NAV*/
-    #logo img {
-        padding: 0.5%;
+    nav {
+        width: 100%;
+        height: 80px;
+        background: #fff;
+        display: block;
+        position: fixed;
+        top: 0;
+        transition: all ease-in-out 0.4s;
+        box box-shadow: 0 0 20px #bbb;    
     }
+
+    .fixedAtTop {
+        -webkit-transform: translateY(-40px);
+        transform: translateY(-40px);
+    }
+
+    body::-webkit-scrollbar{ width: 5px;}
+body::-webkit-scrollbar-track {
+  background-color:#ddd;
+  border-radius: 0;
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background-color:#1abc9c;
+}
+
+.handle{width:30px; height:30px; backround:red; z-index:999; position:absolute;}
 /*ENDE NAV*/
 
 /*WRAPPER*/
