--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,7 +50,10 @@ body::-webkit-scrollbar-thumb {
 }
 
 nav img {
-    align-self: center;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 /*ENDE NAV*/
 
