--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,7 @@ body::-webkit-scrollbar-thumb {
 
 nav img {
     display: block;
+    margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
   width: 15%;
