--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ body::-webkit-scrollbar-thumb {
 
 nav img {
     display: block;
-    margin-top: 2%;
+    margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   width: 15%;
