--- a/stylesheet.css
+++ b/stylesheet.css
@@ -341,6 +341,14 @@ svg path {
         height: auto;
     }
 
+    nav img {
+        display: block;
+        margin-top: 5px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 25%;
+    }
+
 }
 
 
