--- a/stylesheet.css
+++ b/stylesheet.css
@@ -342,6 +342,13 @@ svg path {
         height: auto;
     }
 
+    nav img {
+        display: block;
+        margin-top: 10px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 15%;
+    }
 
 }
 
