--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,7 +152,7 @@ aside section p {
     border-radius: 5px;
 }
 
-#cta1 {
+/*#cta1 {
     width: 70%;
     height: auto;
     margin-right: 0.9%;
@@ -164,8 +164,19 @@ aside section p {
     width: 25%;
     height: auto;
     margin-left: 20%;
-}
-
+}*/
+.column {
+    float: left;
+    width: 50%;
+    padding: 5px;
+  }
+  
+  /* Clear floats after image containers */
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 /*Zoom in Effekt*/
 figure {
 	width: 35%;
