--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,17 +166,13 @@ aside section p {
     height: auto;
     margin-left: 20%;
 }*/
-.column {
-    float: left;
-    width: 50%;
-    padding: 5px;
+.row {
+    display: flex;
   }
   
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
+  .column {
+    flex: 33.33%;
+    padding: 5px;
   }
 /*Zoom in Effekt*/
 figure {
