--- a/stylesheet.css
+++ b/stylesheet.css
@@ -261,7 +261,7 @@ figure {
 /*CTA3*/
 #cta3 {
     background-color: rgb(123, 170, 160);
-    margin: 5% 0 5% 0;
+    margin: 50px;
 }
 
 #cta3 h3 {
