--- a/stylesheet.css
+++ b/stylesheet.css
@@ -261,7 +261,7 @@ figure {
 /*CTA3*/
 #cta3 {
     background-color: rgb(123, 170, 160);
-    padding: 0.5% 0 0.5% 0;
+    padding: 50px 0 50px 0;
 }
 
 #cta3 h3 {
