--- a/stylesheet.css
+++ b/stylesheet.css
@@ -261,7 +261,8 @@ figure {
 /*CTA3*/
 #cta3 {
     background-color: rgb(123, 170, 160);
-    padding: 5px 0 5px 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 #cta3 h3 {
