--- a/stylesheet.css
+++ b/stylesheet.css
@@ -318,6 +318,11 @@ footer {
     float: left;
 }
 
+#footerRIGHT p a {
+    text-decoration: none;
+    color: black;
+}
+
 svg {
     width: 50px;
     height: 50px;
