--- a/stylesheet.css
+++ b/stylesheet.css
@@ -327,7 +327,9 @@ footer {
 svg {
     width: 50px;
     height: 50px;
-    justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 svg:hover path{
