--- a/stylesheet.css
+++ b/stylesheet.css
@@ -324,12 +324,15 @@ footer {
     color: black;
 }
 
-svg {
-    width: 50px;
-    height: 50px;
+#svgs {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+svg {
+    width: 50px;
+    height: 50px;
 }
 
 svg:hover path{
