--- a/stylesheet.css
+++ b/stylesheet.css
@@ -327,8 +327,8 @@ footer {
 #svgs {
    margin-left: auto;
    margin-right: auto;
-   display: inline-block;
-   
+   display: block;
+
 }
 
 .row {
