--- a/stylesheet.css
+++ b/stylesheet.css
@@ -301,6 +301,7 @@ footer {
     background-color: rgb(246, 246, 246);
     height: auto;
     padding-top: 2%;
+    width: 70%;
 }
 
 #footerLEFT {
