--- a/stylesheet.css
+++ b/stylesheet.css
@@ -302,7 +302,7 @@ footer {
     height: auto;
     padding-top: 2%;
     width: 70%;
-    align-items: center;
+    justify-content: center;
 }
 
 #footerLEFT {
