--- a/stylesheet.css
+++ b/stylesheet.css
@@ -302,7 +302,9 @@ footer {
     height: auto;
     padding-top: 2%;
     width: 70%;
-    justify-content: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #footerLEFT {
