--- a/stylesheet.css
+++ b/stylesheet.css
@@ -329,12 +329,12 @@ footer {
     color: black;
 }
 
-#svgs {
+/*#svgs {
    margin-left: auto;
    margin-right: auto;
    display: inline-block;
 
-}
+}*/
 
 .row {
     display: block;
