--- a/stylesheet.css
+++ b/stylesheet.css
@@ -329,18 +329,18 @@ footer {
     color: black;
 }
 
-/*#svgs {
+#svgs {
    margin-left: auto;
    margin-right: auto;
-   display: inline-block;
+   display: block;
 
-}*/
+}
 
-.row {
+/*.row {
     display: block;
     margin-left: auto;
     margin-right: auto;
-}
+}*/
 
 svg {
     width: 50px;
