--- a/stylesheet.css
+++ b/stylesheet.css
@@ -263,7 +263,8 @@ figure {
     background-color: rgb(123, 170, 160);
     padding-top: 20px; /*WHAT DA F*/
     padding-bottom: 20px;
-    
+    margin-top: 20%;
+    margin bottom: 20%;
 }
 
 #cta3 h3 {
