--- a/stylesheet.css
+++ b/stylesheet.css
@@ -285,7 +285,9 @@ figure {
     margin: 8px 0;
     border: 1px solid #ffffff;
     box-sizing: border-box;  
-    align-items: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #submit {
