--- a/stylesheet.css
+++ b/stylesheet.css
@@ -172,12 +172,12 @@ aside section p {
   
   .column1 {
     flex: 70%;
-    padding: 5px;
+    /*padding: 5px;*/
   }
 
   .column2 {
       flex: 30%;
-      padding: 5px;
+      /*padding: 5px;*/
   }
 /*Zoom in Effekt*/
 figure {
