--- a/stylesheet.css
+++ b/stylesheet.css
@@ -180,7 +180,7 @@ aside section p {
       /*padding: 5px;*/
   }
 /*Zoom in Effekt*/
-figure {
+/*figure {
 	width: 35%;
 	margin: 0;
 	padding: 0;
@@ -197,7 +197,7 @@ figure {
 .hover01 figure:hover img {
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
-}
+}*/
 /*Ende Zoom In effekt */
 
 #btn1 {
