--- a/stylesheet.css
+++ b/stylesheet.css
@@ -177,7 +177,7 @@ aside section p {
 
   .column2 {
       flex: 30%;
-      /*padding: 5px;*/
+      margin: 5px;
   }
 /*Zoom in Effekt*/
 figure {
