--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,9 +166,12 @@ aside section p {
     height: auto;
     margin-left: 20%;
 }*/
-/*.row {
+.row {
     display: flex;
-  }*/
+    background: blue;
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
   
   .column1 {
     width: 70%;
@@ -181,7 +184,6 @@ aside section p {
   }
 /*Zoom in Effekt*/
 figure {
-	
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
