--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,7 +166,7 @@ aside section p {
     height: auto;
     margin-left: 20%;
 }*/
-.row {
+.lb {
     
     background: blue;
     padding-top: 50px;
