--- a/stylesheet.css
+++ b/stylesheet.css
@@ -166,7 +166,7 @@ aside section p {
     margin-left: 20%;
 }
 .lb {
-    
+    width: 100%;
     background: blue;
     padding-top: 50px;
     padding-bottom: 50px;
