--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,13 +153,13 @@ aside section p {
     border-radius: 5px;
 }
 #cta1 {
-    width: 30%;
+    width: 69%;
     height: auto;
     float: left;
 }
 
 #cta2 {
-    float: right;
+    float: left;
     width: 30%;
     height: auto;
 }
