--- a/stylesheet.css
+++ b/stylesheet.css
@@ -244,7 +244,7 @@ figure {
 .Marktlogo {
     height: 60px;
     width: auto;
-    display: inline-block;
+    display: inline-flex;
 }
 /*ENDE ERHÄLTLICH BEI*/
 
