--- a/stylesheet.css
+++ b/stylesheet.css
@@ -127,12 +127,13 @@ aside section p {
     margin: 20px 0 50px 0;
 }
 
-.carousel-item{
+/*.carousel-item{
     height: 600px;
 } 
 .carousel-item img{
     height: 600px;
-}
+}*/
+
 /*ENDE GESCHMACKSRICHTUNG*/
 
 /*CTA*/
