--- a/stylesheet.css
+++ b/stylesheet.css
@@ -302,7 +302,7 @@ figure {
 
 /*SOCIAL MEDIA*/
 .row1 svg {
-    display: block;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
 }
