--- a/stylesheet.css
+++ b/stylesheet.css
@@ -302,11 +302,11 @@ figure {
 /*ENDE CTA3*/
 
 /*SOCIAL MEDIA*/
-/*.row1 svg {
-    display: flex;
+.row {
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
-}*/
+}
 
 svg {
     width: 50px;
