--- a/stylesheet.css
+++ b/stylesheet.css
@@ -306,6 +306,8 @@ figure {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 svg {
