--- a/stylesheet.css
+++ b/stylesheet.css
@@ -336,7 +336,8 @@ svg path {
 
 /*FOOTER*/
 footer {
-      
+    background-color: rgb(246, 246, 246); 
+    height: 3px; 
     padding-top: 2%;
     width: 70%;
     display: block;
