--- a/stylesheet.css
+++ b/stylesheet.css
@@ -232,23 +232,15 @@ figure {
 /*ENDE FAQ*/
 
 /*ERHÄLTLICH BEI*/
-#Laden {
-    clear: left;
-    margin: 5% 0 0 0;
-    padding: 0 5% 0 5%;
-}
 
-#Laden h3 {
+h3 {
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
 }
 
-
 .Marktlogo {
     height: 60px;
-    width: auto;
-    
 }
 /*ENDE ERHÄLTLICH BEI*/
 
