--- a/stylesheet.css
+++ b/stylesheet.css
@@ -233,7 +233,7 @@ figure {
 
 /*ERHÄLTLICH BEI*/
 
-.row h3 {
+#markt {
     text-align: center;
     text-transform: uppercase;
     font-weight: 500;
