--- a/stylesheet.css
+++ b/stylesheet.css
@@ -80,6 +80,11 @@ header {
     width: 100%;
     margin-top: 80px;
 }
+
+#claim {
+    position: absolute;
+    
+}
 /*ENDE HEADER*/
 
 /*SPRECHBLASEN*/
