--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,10 @@ header {
     margin-top: -250px;
     margin-left: 100px;
     color: white;
+}
 
+#claim h2 {
+    font-weight: lighter;
 }
 /*ENDE HEADER*/
 
