--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,7 +85,7 @@ header {
     position: absolute;
     margin-top: -250px;
     margin-left: 100px;
-    color: white;
+    color: black;
 }
 
 #claim h2 {
