--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,7 @@ header {
     margin-top: -250px;
     margin-left: 100px;
     color: black;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 #claim h2 {
