--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,7 +86,8 @@ header {
     margin-top: -250px;
     margin-left: 100px;
     color: black;
-    background-color: rgba(255, 255, 255, 0.116);
+    background-color: white;
+    opacity: 0.5;
 }
 
 #claim h2 {
