--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ header {
     margin-left: 100px;
     color: black;
     background-color: white;
-    opacity: 0.5;
+    background-color: transparent;
 }
 
 #claim h2 {
