--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,8 +86,8 @@ header {
     margin-top: -250px;
     margin-left: 100px;
     color: black;
-    background-color: white;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0,3);
+    
 }
 
 #claim h2 {
