--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,7 +87,7 @@ header {
     margin-left: 100px;
     color: black;
     background-color: rgba(255, 255, 255, 0.5);
-    
+    border-radius: 5px;
 }
 
 #claim h2 {
