--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,6 +88,7 @@ header {
     color: black;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
+    padding: 2px;
 }
 
 #claim h2 {
