--- a/stylesheet.css
+++ b/stylesheet.css
@@ -384,7 +384,7 @@ footer {
         margin-bottom: 2%;
     }
 
-    .carousel-inner {
+    .carousel-inner img{
         
         height: 850px;
     }
