--- a/stylesheet.css
+++ b/stylesheet.css
@@ -416,6 +416,10 @@ footer {
 
     .row svg {
         margin: 20px;
+        
+    }
+
+    .col-sm-3 d-flex justify-content-center {
         width: 25%;
     }
 
