--- a/stylesheet.css
+++ b/stylesheet.css
@@ -420,7 +420,8 @@ footer {
     }
 
     .col-sm-3 d-flex justify-content-center {
-        width: 25%;
+        width: 20%;
+        float: left;
     }
 
 }
