--- a/stylesheet.css
+++ b/stylesheet.css
@@ -419,10 +419,9 @@ footer {
         
     }
 
-    .col-sm-3 d-flex justify-content-center {
-        display: inline-block;
+    #mail {
+        width: 75%;
     }
-
 }
 
 
