--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ body::-webkit-scrollbar-track {
 }
 body::-webkit-scrollbar-thumb {
   border-radius: 0;
-  background-color:#1abc9c;
+  background-color:rgb(123, 170, 160);
 }
 
 .handle {
