--- a/stylesheet.css
+++ b/stylesheet.css
@@ -386,7 +386,7 @@ footer {
 
     #claim {
         margin-left: 20px;
-        margin-bottom: -50px;
+        margin-top: -50px;
         font-size: 50%;
     }
     
