--- a/stylesheet.css
+++ b/stylesheet.css
@@ -388,6 +388,7 @@ footer {
         margin-left: 20px;
         margin-top: -120px;
         font-size: 50%;
+        font-weight: 500;
     }
     
 
