--- a/stylesheet.css
+++ b/stylesheet.css
@@ -179,22 +179,22 @@ aside section p {
     height: auto;
 }
 
-/*.lb {
+.row {
     width: 100%;
     background: blue;
     padding-top: 50px;
     padding-bottom: 50px;
   }
 
-.column1 {
+.col col-12 col-lg-8 {
     width: 70%;
     float: left;
 }
 
-.column2 {
+.col col-12 col-lg-4 hover01 {
     width: 30%;
     float: left;
-}*/
+}
 /*Zoom in Effekt*/
 figure {
 	
