--- a/stylesheet.css
+++ b/stylesheet.css
@@ -430,7 +430,7 @@ footer {
         
     }
     .col-sm-3 d-flex justify-content-center {
-        display: flex;
+        display: inline-block;
     }
 
     #mail {
