--- a/stylesheet.css
+++ b/stylesheet.css
@@ -337,6 +337,7 @@ footer {
     text-align: left;
     width: 50%;
     float: left;
+    background-color: rgb(246, 246, 246);
 }
 
 #footerLEFT p a {
