--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,7 +300,7 @@ figure {
 
 /*SOCIAL MEDIA*/
 .row {
-    width: 70%;
+    /*width: 70%;*/
     margin-left: auto;
     margin-right: auto;
     margin-top: 2%;
