--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,9 +300,8 @@ figure {
 
 /*SOCIAL MEDIA*/
 .row {
-    /*width: 70%;*/
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 30%;
+    margin-right: 30%;
     margin-top: 2%;
     margin-bottom: 2%;
 }
