--- a/stylesheet.css
+++ b/stylesheet.css
@@ -300,8 +300,8 @@ figure {
 
 /*SOCIAL MEDIA*/
 .row {
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 2%;
     margin-bottom: 2%;
 }
