--- a/stylesheet.css
+++ b/stylesheet.css
@@ -337,6 +337,7 @@ footer {
     width: 50%;
     float: left;
     background-color: rgb(246, 246, 246);
+    margin-left: -50px;
 }
 
 #footerLEFT p a {
@@ -348,7 +349,8 @@ footer {
     text-align: right;
     width: 50%;
     float: left;
-    background-color: rgb(246, 246, 246)
+    background-color: rgb(246, 246, 246);
+    margin-right: 50px; 
 }
 
 #footerRIGHT p a {
