--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,8 @@ body::-webkit-scrollbar-thumb {
 
 nav img {
     display: block;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin
   margin-left: auto;
   margin-right: auto;
   width: 10%;
@@ -101,12 +102,9 @@ aside {
     
     padding: 0.2% 2% 0.2% 2%;
     margin: 50px 0 50px 0;
-    height: 205px;
+    height: 405px;
 }
 
-aside section img {
-    size: 75%;
-}
 
 aside section {
     
