--- a/stylesheet.css
+++ b/stylesheet.css
@@ -144,7 +144,7 @@ aside section p {
     background-color: rgb(226, 226, 226);
     margin: 25px 10% 0 10%;
     padding: 2% 3% 2% 3%;
-    height: 160px;
+    height: 140px;
     border-radius: 10px;
 }
 /*ENDE SPRECHBLASEN*/
@@ -405,18 +405,25 @@ footer {
     }
     
 
-    h3 {
-        font-size: 1.9em;
-    }
-
-    h2 {
-        font-size: 2.4em;
-    }
-
     h1 {
-        font-size: 2.9em;
+        font-size: 44px;
     }
-
+    
+    h2 {
+        font-size: 34px;
+    }
+    
+    h3 {
+        font-size: 28px;
+    }
+    
+    h4 {
+        font-size: 20px;
+    }
+    
+    p {
+        font-size: 14px;
+    }
     nav img {
         display: block;
         margin-top: 10px;
